
  * Added "basepkgs" option to specify which packages should be
    considered base
  * The list of base modules is no longer specified by hand - Base
    packages are now queried and this list is generated from it.
  * Pragmas and base modules are handled the same way - There is no real
    way to differentiate them... And they were used interchangeably, so
    there ;-)

 -- Gunnar Wolf <gwolf@debian.org>  Tue, 07 Aug 2007 12:32:26 -0500

dh-make-perl (0.27) unstable; urgency=low

  [ Gunnar Wolf ]
  * Moved all the options received from the user to %opts, for better
    code readability
  * When the module to be packaged declares a dependency on a specific
    Perl version, reflect it in the output dependency/build dependency
    information, rather than complaining that no such module exists

  [ gregor herrmann ]
  * Add "It was downloaded from ..." to debian/copyright if called with
    "--cpan $modulename".
  * Define $dir before using it in "$modulepm =" in
    extract_name_ver_from_makefile().
  * Replace q[quotes] by "quotes" when parsing Makefile.PL in
    extract_name_ver_from_makefile().
  * Actually use command line option "--desc".

  [ Damyan Ivanov ]
  * Added packaging copyright/licensing to the generated debian/copyright
  * Added myself to Uploaders
  * Wrap long fields in debian/control
  * Add detailed copyright info in debian/copyright according to SVN logs and
    debian/changelog

  [ Gunnar Wolf ]
  * Clarified the messages when called in a system where apt-file
    (recommended but not depended upon) is not present (Closes: #428415)
  * Added some modules should be part of @stdmodules; the list is hand-
    crafted and incomplete - we need a better solution!
	
 -- Gunnar Wolf <gwolf@debian.org>  Tue, 07 Aug 2007 10:50:45 -0500

dh-make-perl (0.26) unstable; urgency=low

  [ Frank Lichtenheld ]
  * s/debian/Debian/ in Description

  [ Gunnar Wolf ]
  * Trimmed unneeded whitespace from generated files - Thanks to Kees