@@ -25,7 +25,7 @@ build-stamp:
 
 	# Add commands to compile the package here
 	$(PERL) Makefile.PL INSTALLDIRS=vendor
-	$(MAKE) OPTIMIZE="-Wall -O2 -g"
+	$(MAKE)
 
 	touch build-stamp
 
@@ -61,14 +61,10 @@ binary-arch:
 binary-indep: build install
 	dh_testdir
 	dh_testroot
-#	dh_installcron
-#	dh_installmenu
-#	dh_installexamples
+	dh_installexamples
 	dh_installdocs #DOCS#
 	dh_installchangelogs #CHANGES#
 	dh_perl
-	dh_link
-	dh_strip
 	dh_compress
 	dh_fixperms
 	dh_installdeb
